# proto/swagger.yml
@@ -35,6 +35,8 @@ paths:
               $ref: '#/definitions/Account'
         '400':
           description: Invalid status value
+        '500':
+          description: Operation error
   /account:
     post:
       tags:
@@ -42,23 +44,29 @@ paths:
       summary: Add a new account
       description: ''
       operationId: addAccount
-      consumes:
-        - application/json
       produces:
         - application/json
       parameters:
-        - in: body
-          name: body
-          description: Account to be added
+        - in: query
+          name: name
+          description: Name for the new account
           required: true
+          type: string
+        - in: query
+          name: amount
+          description: Initial amount for the new account
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
           schema:
             $ref: '#/definitions/Account'
-      responses:
-        '204':
-          description: successful operation
         '405':
           description: Invalid input
-  '/account/{accountID}':
+        '500':
+          description: Operation error
   /account/findByName:
     get:
       tags:
@@ -81,7 +89,11 @@ paths:
             $ref: '#/definitions/Account'
         '400':
           description: Invalid status value
-  '/account/{accountID}':
+        '404':
+          description: Account not found
+        '500':
+          description: Operation error
+  '/account/{id}':
     get:
       tags:
         - account
@@ -91,7 +103,7 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: accountID
+        - name: id
           in: path
           description: ID of account to return
           required: true
@@ -105,7 +117,9 @@ paths:
         '400':
           description: Invalid ID supplied
         '404':
-          description: Pet not found
+          description: Account not found
+        '500':
+          description: Operation error
     delete:
       tags:
         - account
@@ -115,7 +129,7 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: accountID
+        - name: id
           in: path
           description: Account id to delete
           required: true
@@ -128,7 +142,7 @@ paths:
           description: Invalid ID supplied
         '404':
           description: Account not found
-  '/account/withdrawal/{accountID}':
+  '/account/withdrawal/{id}':
     put:
       tags:
         - account
@@ -138,7 +152,7 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: accountID
+        - name: id
           in: path
           description: Account id to update
           required: true
@@ -146,17 +160,22 @@ paths:
           format: int64
         - name: amount
           in: query
+          required: true
           description: Amount to be withdrawed
           type: integer
           format: int64
       responses:
-        '204':
+        '200':
           description: successful operation
+          schema:
+            $ref: '#/definitions/Account'
         '400':
           description: Invalid ID supplied
         '404':
           description: Account not found
-  '/account/deposit/{accountID}':
+        '500':
+          description: Operation error
+  '/account/deposit/{id}':
     put:
       tags:
         - account
@@ -166,7 +185,7 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: accountID
+        - name: id
           in: path
           description: Account id to update
           required: true
@@ -175,18 +194,21 @@ paths:
         - name: amount
           in: query
           description: Amount to be placed
+          required: true
           type: integer
           format: int64
       responses:
-        '204':
+        '200':
           description: successful operation
+          schema:
+            $ref: '#/definitions/Account'
         '400':
           description: Invalid ID supplied
         '404':
           description: Account not found
         '500':
           description: Operation error
-  '/account/transfer/{accountID}':
+  '/account/transfer/{id}':
     put:
       tags:
         - account
@@ -196,7 +218,7 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: accountID
+        - name: id
           in: path
           description: Account id to take money from
           required: true
@@ -205,16 +227,22 @@ paths:
         - name: amount
           in: query
           description: Amount to be transferred
+          required: true
           type: integer
           format: int64
         - name: target
           in: query
           description: Account id to place money to
+          required: true
           type: integer
           format: int64
       responses:
-        '204':
+        '200':
           description: successful operation
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Account'
         '400':
           description: Invalid ID supplied
         '404':
